# smartcontract-verifier

./: .gitignore  Makefile  README.md  pyproject.toml  roadmap.md
config/: default_config.json
docs/: vm-integration.md
src/: config.py  conflict_check.py  image_reader.py  memory_check.py  report.py  snapshot.py  spaces_verify.py
src/vm/: Makefile  bitcpy.c  invariants.c  invariants.h  space.c  space.h  test_vm.c
tests/: test_cli.py  test_config.py  test_conflict_check.py  test_image_reader.py  test_integration.py  test_memory_check.py  test_snapshot.py
