[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "space-verifier"
version = "0.1.0"
description = "L1+L2 verifier for copy-space/DPF address space images"
requires-python = ">=3.10"

[project.scripts]
spaces-verify = "src.spaces_verify:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
