[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "space-verifier"
version = "0.1.0"
description = "Two-layer formal verifier (L1 memory safety + L2 conflict freedom) for a single-instruction smart contract VM"
requires-python = ">=3.10"

[project.scripts]
spaces-verify = "src.spaces_verify:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
